--- a/package.json
+++ b/package.json
@@ -61,15 +61,15 @@
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "@google/model-viewer": "^1.12.0",
     "@keeex/qrcodejs-kx": "^1.0.2",
-    "@kodadot1/minimark": "^0.0.1-rc.7",
-    "@kodadot1/sub-api": "^0.0.1-rc.3",
+    "@kodadot1/minimark": "0.0.1-rc.7",
+    "@kodadot1/sub-api": "^0.0.1-rc.4",
     "@kodadot1/vuex-options": "0.0.1-rc.8",
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/i18n": "^7.2.2",
-    "@polkadot/extension-dapp": "^0.42.6",
-    "@polkadot/extension-inject": "^0.42.7",
-    "@polkadot/ui-keyring": "0.89.4-1",
-    "@polkadot/vue-identicon": "^0.89.2",
+    "@polkadot/extension-dapp": "^0.42.10",
+    "@polkadot/extension-inject": "^0.42.10",
+    "@polkadot/ui-keyring": "2.5.1",
+    "@polkadot/vue-identicon": "^0.89.3",
     "@ramp-network/ramp-instant-sdk": "^3.1.1",
     "apollo-boost": "^0.4.9",
     "axios": "^0.27.2",
