--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=9090 nuxt dev",
+    "dev": "SET PORT=9090 && nuxt dev",
     "dev-docker": "npx nuxi dev",
     "dev-experimental": "nuxi dev --hostname localhost --port 9090",
     "build": "nuxi build --modern",
