--- a/package.json
+++ b/package.json
@@ -123,6 +123,8 @@
     "@types/markdown-it": "^12.2.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "@vitejs/plugin-vue": "^3.0.0",
+    "@vue/test-utils": "1",
     "all-contributors-cli": "^6.20.0",
     "consola": "^2.15.3",
     "eslint": "^8.19.0",
