--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,6 @@
       "vitest/globals"
     ]
   },
-  "exclude": ["node_modules", ".nuxt", "dist", "**/*.spec.ts"]
+  "exclude": ["node_modules", ".nuxt", "dist", "**/*.spec.ts"],
+  "files":["svg.d.ts"]
 }
